--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     browser window to see how the<br>
     background image behaves.
   </p>
-  <p><a href="https://www.instagram.com/prafullitmedi/">Visit my cool instagram account</a></p>
+  <p><a href="https://www.youtube.com/prafullitmedi//">Visit my cool instagram account</a></p>
 </body>
 
 </html>
